--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="home-content">
                 <div class="text-1">Hola, mi nombre es</div>
                 <div class="text-2">Lucas Marina</div>
-                <div class="text-3">Y yo soy <span class="typing"></span></div>
+                <div class="text-3">Y soy <span class="typing"></span></div>
                 <a href="#">Contactarme</a>
             </div>
         </div>
@@ -55,7 +55,7 @@
                     <img src="images/profile-1.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Yo soy Lucas Marina <span class="typing-2"></span></div>
+                    <div class="text">Soy Lucas Marina <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
                     <a href="#">Descargar CV</a>
                 </div>
@@ -77,14 +77,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fas fa-browser"></i>
                         <div class="text">Creación de Aplicaciones Web</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fas fa-cocktail"></i>
                         <div class="text">BarManager</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Mensajeame</div>
+                    <div class="text">Conectarse conmigo</div>
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
