--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-browser"></i>
+                        <i class="fas fa-desktop"></i>
                         <div class="text">Creación de Aplicaciones Web</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
